--- a/components/Title/title.module.css
+++ b/components/Title/title.module.css
@@ -2,17 +2,19 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-top: 10%;
+  margin-top: 5%;
   justify-content: start;
   align-items: center;
 }
 
 .title {
-  font-weight: bold;
-  font-size: 50px;
+  text-transform: uppercase;
+  font-size: 60px;
+  text-align: center;
 }
 
 .subTitle {
   margin: 10px;
   font-size: large;
+  text-align: center;
 }
