--- a/components/Title/title.module.css
+++ b/components/Title/title.module.css
@@ -22,9 +22,17 @@
 @media (max-width: 576px) {
   .title {
     font-size: 30px;
+    text-align: center;
   }
 
   .subTitle {
     font-size: 0.875rem;
+    text-align: center;
   }
+}
+
+.divider {
+  width: 100%;
+  height: 3px;
+  background-color: #f0f2f4;
 }
